--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		</div>
 		<div class="linkContainer">
 			<a class="links" href="https://github.com/SinghDushyantSahu" target="_blank"><img
-					src="/store/github_icon.png" alt="GitHub"></a>
+					src="./store/github_icon.png" alt="GitHub"></a>
 			<a class="links" href="https://www.linkedin.com/in/dushyant-singh-2b5a40195/" target="_blank"><img
-					src="/store/linkedIn_icon.png" alt="LinkedIn"></a>
+					src="./store/linkedIn_icon.png" alt="LinkedIn"></a>
 		</div>
 	</section>
 	<section class="mainBody">
